k8s/aml-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aml-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aml-service
  template:
    metadata:
      labels:
        app: aml-service
    spec:
      containers:
        - name: aml-service
          image: your-registry/aml-service:latest
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: aml-service
spec:
  ports:
    - port: 8002
      targetPort: 8002
  selector:
    app: aml-service
